--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,8 @@ frozenlist==1.3.3
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
-langchain==0.0.212
-langchainplus-sdk==0.0.17
+langchain==
+langchainplus-sdk
 MarkupSafe==2.1.3
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
