--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ frozenlist==1.3.3
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
-langchain==
+langchain
 langchainplus-sdk
 MarkupSafe==2.1.3
 marshmallow==3.19.0
